--- a/level4task2/app/src/main/res/layout/activity_history.xml
+++ b/level4task2/app/src/main/res/layout/activity_history.xml
@@ -7,18 +7,18 @@
     tools:context=".History">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/r_history"
         android:layout_width="409dp"
         android:layout_height="500dp"
-        android:id="@+id/r_history"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="1dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/clear"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="clear"
-        tools:layout_editor_absoluteX="161dp"
-        tools:layout_editor_absoluteY="588dp" />
+        app:layout_constraintTop_toBottomOf="@+id/r_history"
+        tools:layout_editor_absoluteX="161dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
