--- a/level4task2/app/src/main/res/layout/history_list.xml
+++ b/level4task2/app/src/main/res/layout/history_list.xml
@@ -30,6 +30,19 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/match_time"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="132dp"
+        android:text="2 november 1999"
+        android:textAlignment="center"
+
+        app:layout_constraintEnd_toStartOf="@+id/imageView2"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
         android:id="@+id/you"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
