--- a/level2task2/app/src/main/res/layout/activity_main.xml
+++ b/level2task2/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/quiz_view"
         android:layout_width="match_parent"
-        android:layout_height="190dp"
+        android:layout_height="match_parent"
         android:scrollbars="vertical"
         tools:layout_editor_absoluteY="1dp" />
 
